--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.b8dcdd0e.js"></script>
-    <link rel="stylesheet" href="/assets/index.4bded940.css">
+    <script type="module" crossorigin src="/assets/index.d71ff6c8.js"></script>
+    <link rel="stylesheet" href="/assets/index.bfa49770.css">
   </head>
-  <body class="overflow-hidden">
+  <body class="overflow-auto">
     <div id="app"></div>
     
   </body>
