--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.5902af0a.js"></script>
-    <link rel="stylesheet" href="/assets/index.9d00a98c.css">
+    <script type="module" crossorigin src="/assets/index.c956279f.js"></script>
+    <link rel="stylesheet" href="/assets/index.431df9cf.css">
   </head>
   <body class="overflow-auto">
     <div id="app"></div>
