--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.0c35e5ff.js"></script>
-    <link rel="stylesheet" href="/assets/index.9eb1ca8e.css">
+    <title>MadManga NFT ( Test )</title>
+    <script type="module" crossorigin src="/assets/index.347ba99c.js"></script>
+    <link rel="stylesheet" href="/assets/index.45928bb2.css">
   </head>
   <body>
     <div id="app"></div>
