--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MadManga NFT ( Test )</title>
+    <!-- Google tag (gtag.js) -->
+<!--     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XYLF1JP3M3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-XYLF1JP3M3');
+    </script> -->
     <script type="module" crossorigin src="/assets/index.8f57728e.js"></script>
     <link rel="stylesheet" href="/assets/index.0fc3dcda.css">
   </head>
