--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>MadManga NFT ( Test )</title>
     <!-- Google tag (gtag.js) -->
 <!--     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XYLF1JP3M3"></script>
@@ -14,8 +15,8 @@
 
       gtag('config', 'G-XYLF1JP3M3');
     </script> -->
-    <script type="module" crossorigin src="/assets/index.29b74d03.js"></script>
-    <link rel="stylesheet" href="/assets/index.d6b61ab3.css">
+    <script type="module" crossorigin src="/assets/index.88ac6361.js"></script>
+    <link rel="stylesheet" href="/assets/index.2e4a4b0c.css">
   </head>
   <body>
     <div id="app"></div>
