--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-zoom/1.7.20/jquery.zoom.min.js"></script>
     <title>MadManga NFT ( Test )</title>
     <!-- Google tag (gtag.js) -->
 <!--     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XYLF1JP3M3"></script>
@@ -14,8 +16,8 @@
 
       gtag('config', 'G-XYLF1JP3M3');
     </script> -->
-    <script type="module" crossorigin src="/assets/index.3c7187ba.js"></script>
-    <link rel="stylesheet" href="/assets/index.c3d556c5.css">
+    <script type="module" crossorigin src="/assets/index.75401bcc.js"></script>
+    <link rel="stylesheet" href="/assets/index.785f3264.css">
   </head>
   <body>
     <div id="app"></div>
