--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!--     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-zoom/1.7.20/jquery.zoom.min.js"></script> -->
-    <title>MadManga NFT ( Test )</title>
+    <title>MadManga NFT</title>
     <!-- Google tag (gtag.js) -->
 <!--     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XYLF1JP3M3"></script>
     <script>
@@ -16,8 +14,8 @@
 
       gtag('config', 'G-XYLF1JP3M3');
     </script> -->
-    <script type="module" crossorigin src="/assets/index.f556a55e.js"></script>
-    <link rel="stylesheet" href="/assets/index.34390f0e.css">
+    <script type="module" crossorigin src="/assets/index.c68631ba.js"></script>
+    <link rel="stylesheet" href="/assets/index.be56f8db.css">
   </head>
   <body>
     <div id="app"></div>
