--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MadManga NFT</title>
     <!-- Google tag (gtag.js) -->
-<!--     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XYLF1JP3M3"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XYLF1JP3M3"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-XYLF1JP3M3');
-    </script> -->
-    <script type="module" crossorigin src="/assets/index.9de9b056.js"></script>
-    <link rel="stylesheet" href="/assets/index.98f1e174.css">
+    </script>
+    <script type="module" crossorigin src="/assets/index.85eecbb4.js"></script>
+    <link rel="stylesheet" href="/assets/index.fc7fe4ac.css">
   </head>
   <body>
     <div id="app"></div>
